--- a/.gitmodules
+++ b/.gitmodules
@@ -16,7 +16,7 @@
     ignore = dirty
 [submodule "bundle/snipmate"]
 	path = bundle/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
+	url = https://github.com/garbas/vim-snipmate.vim.git
     ignore = dirty
 [submodule "bundle/command-t"]
 	path = bundle/command-t
