--- a/.gitmodules
+++ b/.gitmodules
@@ -1,36 +1,36 @@
 [submodule "bundle/surround"]
 	path = bundle/surround
-	url = https://github.com/tpope/vim-surround.git
+	url = git://github.com/tpope/vim-surround.git
     ignore = dirty
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+	url = git://github.com/tpope/vim-fugitive.git
     ignore = dirty
 [submodule "bundle/html5"]
 	path = bundle/html5
-	url = https://github.com/othree/html5.vim.git
+	url = git://github.com/othree/html5.vim.git
     ignore = dirty
 [submodule "bundle/powershell"]
 	path = bundle/powershell
-	url = https://github.com/PProvost/vim-ps1
+	url = git://github.com/PProvost/vim-ps1
     ignore = dirty
 [submodule "bundle/snipmate"]
 	path = bundle/snipmate
-	url = https://github.com/garbas/vim-snipmate.git
+	url = git://github.com/garbas/vim-snipmate.git
     ignore = dirty
 [submodule "bundle/command-t"]
 	path = bundle/command-t
-	url = https://github.com/wincent/Command-T.git
+	url = git://github.com/wincent/Command-T.git
     ignore = dirty
 [submodule "bundle/camelcasemotion"]
 	path = bundle/camelcasemotion
-	url = https://github.com/bkad/CamelCaseMotion.git
+	url = git://github.com/bkad/CamelCaseMotion.git
     ignore = dirty
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
-	url = https://github.com/inkarkat/nerdcommenter.git
+	url = git://github.com/inkarkat/nerdcommenter.git
     ignore = dirty
 [submodule "bundle/repeat"]
 	path = bundle/repeat
-	url = https://github.com/inkarkat/vim-repeat.git
+	url = git://github.com/inkarkat/vim-repeat.git
     ignore = dirty
