--- a/.gitmodules
+++ b/.gitmodules
@@ -18,10 +18,6 @@
 	path = bundle/snipmate
 	url = git://github.com/garbas/vim-snipmate.git
     ignore = dirty
-[submodule "bundle/command-t"]
-	path = bundle/command-t
-	url = git://github.com/wincent/Command-T.git
-    ignore = dirty
 [submodule "bundle/camelcasemotion"]
 	path = bundle/camelcasemotion
 	url = git://github.com/bkad/CamelCaseMotion.git
@@ -59,3 +55,6 @@
 [submodule "bundle/makegreen"]
 	path = bundle/makegreen
 	url = git://github.com/reinh/vim-makegreen.git
+[submodule "bundle/ctrlp"]
+	path = bundle/ctrlp
+	url = git://github.com/kien/ctrlp.vim.git
