Added Clangcomplete instead of syntastic
Change-Id: I099b7be8916f3f62d3c5feed6a1e3c3fdbd90ce6

--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 	path = bundle/twig
 	url = git://github.com/beyondwords/vim-twig.git
     ignore = dirty
+[submodule "bundle/clangcomplete"]
+	path = bundle/clangcomplete
+	url = git://github.com/Rip-Rip/clang_complete.git
