Added syntax highlighting for googletest
Change-Id: I906463ac9b89a6e9bfa23210ed33b654b9d720c1

--- a/.gitmodules
+++ b/.gitmodules
@@ -68,3 +68,6 @@
 [submodule "bundle/clangcomplete"]
 	path = bundle/clangcomplete
 	url = git://github.com/Rip-Rip/clang_complete.git
+[submodule "bundle/googletest-syntax"]
+	path = bundle/googletest-syntax
+	url = git://github.com/ciaranm/googletest-syntax.git
